--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,17 @@
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
 
+    <change-notes><![CDATA[
+<h2>New Features</h2>
+<ul>
+</ul>
+<h2>Bug Fixes</h2>
+<ul>
+  <li>Fix tree cell background.</li>
+  <li>Use icons</li>
+</ul>
+]]></change-notes>
+
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
