--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -52,7 +52,7 @@
                 factoryClass="sandipchitale.gistdoit.GistDoItToolWindowFactory"
                 id="Gist Do It"
                 anchor="bottom"
-                icon="sandipchitale.gistdoit.GistDoItIcons.ToolWindow"
+                icon="AllIcons.Vcs.Vendors.Github"
                 secondary="true"
         />
         <notificationGroup
